--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -96,6 +96,10 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\extern_impl.cpp">
+      <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">MaxSpeed</Optimization>
+      <IntrinsicFunctions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</IntrinsicFunctions>
+    </ClCompile>
     <ClCompile Include="..\src\lucid.cpp" />
     <ClCompile Include="..\src\lucid_app.cpp" />
     <ClCompile Include="..\src\lucid_renderer.cpp" />
