--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,33 @@ jobs:
           name: lucid-release-build
           path: lucid-raster
 
+  build-linux:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+
+      - name: Install Dependencies
+        run: |
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo apt update
+          sudo apt-get install libsdl2-dev libfreetype-dev libvorbis-dev libogg-dev libopenal-dev libdwarf-dev libelf-dev
+          wget -qO - https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
+          sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-jammy.list http://packages.lunarg.com/vulkan/lunarg-vulkan-jammy.list
+          sudo apt update
+          sudo apt install libvulkan-dev shaderc glslang-dev vulkan-headers
+
+      - name: Build libfwk
+        run: |
+          cd libfwk
+          make -j8 lib MODE=devel FWK_GEOM=disabled
+
+      - name: Build Lucid
+        run: |
+          make -j8 lucid
+
+
   check-formatting:
     runs-on: ubuntu-22.04
     steps:
